--- a/NHL.Client/NHL.Client.csproj
+++ b/NHL.Client/NHL.Client.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8ED17FBB-8535-4C35-AE37-4AF636C0A79D}</ProjectGuid>
+    <ProjectGuid>{71A2668D-53EF-4043-B1D4-3612E23D9FF4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NHL.Data</RootNamespace>
-    <AssemblyName>NHL.Data</AssemblyName>
+    <RootNamespace>NHL.Client</RootNamespace>
+    <AssemblyName>NHL.Client</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,32 +40,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums\GameTypeEnum.cs" />
-    <Compile Include="Interfaces\INHLModel.cs" />
-    <Compile Include="Model\Conference.cs" />
-    <Compile Include="Model\Division.cs" />
-    <Compile Include="Model\Franchise.cs" />
-    <Compile Include="Model\Player.cs" />
-    <Compile Include="Model\PlayerStatistic.cs" />
-    <Compile Include="Enums\SeasonEnum.cs">
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestBuilders\FluentBuilderBase.cs" />
+    <Compile Include="RequestModels\IRequestModel.cs" />
+    <Compile Include="Resources\ApiUrls.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>SeasonEnum.tt</DependentUpon>
+      <DependentUpon>ApiUrls.resx</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
-    <Compile Include="Model\Position.cs" />
-    <Compile Include="Model\Team.cs" />
-    <Compile Include="Model\TimeZone.cs" />
-    <Compile Include="Model\Venue.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Enums\SeasonEnum.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>SeasonEnum.cs</LastGenOutput>
-    </Content>
+    <ProjectReference Include="..\NHL.Data\NHL.Data.csproj">
+      <Project>{8ed17fbb-8535-4c35-ae37-4af636c0a79d}</Project>
+      <Name>NHL.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <EmbeddedResource Include="Resources\ApiUrls.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ApiUrls.Designer.cs</LastGenOutput>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
