--- a/NHL.Client/NHL.Client.csproj
+++ b/NHL.Client/NHL.Client.csproj
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestBuilders\FluentBuilderBase.cs" />
+    <Compile Include="RequestBuilders\GeneralRequestBuilder.cs" />
+    <Compile Include="RequestModels\GeneralRequestModel.cs" />
     <Compile Include="RequestModels\IRequestModel.cs" />
     <Compile Include="Resources\ApiUrls.Designer.cs">
       <AutoGen>True</AutoGen>
