add methods for conferences/divisions/teams/franchises/playesr

--- a/NHL.Client/NHL.Client.csproj
+++ b/NHL.Client/NHL.Client.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NHLClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestBuilders\FluentBuilderBase.cs" />
     <Compile Include="RequestBuilders\GeneralRequestBuilder.cs" />
@@ -51,6 +56,11 @@
       <DependentUpon>ApiUrls.resx</DependentUpon>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
+    <Compile Include="ResponseModels\ConferenceResponseModel.cs" />
+    <Compile Include="ResponseModels\DivisionsResponseModel.cs" />
+    <Compile Include="ResponseModels\FranchiseResponseModel.cs" />
+    <Compile Include="ResponseModels\PeopleResponseModel.cs" />
+    <Compile Include="ResponseModels\TeamResponseModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NHL.Data\NHL.Data.csproj">
@@ -66,6 +76,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
