--- a/NHL.Client/NHL.Client.csproj
+++ b/NHL.Client/NHL.Client.csproj
@@ -44,6 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\ApiClient.cs" />
+    <Compile Include="API\ApiResult.cs" />
+    <Compile Include="API\HttpClientSingleton.cs" />
+    <Compile Include="API\IApiClient.cs" />
     <Compile Include="NHLClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestBuilders\FluentBuilderBase.cs" />
