--- a/NHL.Client/NHL.Client.csproj
+++ b/NHL.Client/NHL.Client.csproj
@@ -30,9 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -51,10 +50,15 @@
     <Compile Include="Exceptions\NHLClientInternalException.cs" />
     <Compile Include="NHLClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RequestBuilders\FluentBuilderBase.cs" />
-    <Compile Include="RequestBuilders\GeneralRequestBuilder.cs" />
-    <Compile Include="RequestModels\GeneralRequestModel.cs" />
+    <Compile Include="RequestHandlers\GeneralRequestHandler.cs" />
+    <Compile Include="RequestHandlers\IRequestHandler.cs" />
+    <Compile Include="RequestHandlers\RequestHandlerBase.cs" />
     <Compile Include="RequestModels\IRequestModel.cs" />
+    <Compile Include="Requests\FluentBuilder.cs" />
+    <Compile Include="Requests\GeneralRequest.cs" />
+    <Compile Include="RequestModels\GeneralRequestModel.cs" />
+    <Compile Include="Requests\IRequest.cs" />
+    <Compile Include="Requests\RequestBase.cs" />
     <Compile Include="Resources\ApiUrls.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -75,7 +79,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
