--- a/NHL_Core.Client/NHL_Core.Client.csproj
+++ b/NHL_Core.Client/NHL_Core.Client.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\NHL_Core.Data\NHL_Core.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Requests\GolieLeaders\" />
+  </ItemGroup>
+
 </Project>
